# lvgl-motion-demo

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  run_simulator.ps1
assets/logos/source/: README.md
src/: main.c  motion_demo.c  motion_demo.h
tools/: convert_logos.py
